--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Chronosphere</title>
     <style>
       body { margin: 0; overflow: hidden; background: #000; }
